corrected wrong word usage

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
       <!-- CLUSTER NAVIGATION -->
       <div id="clusters-nav" class="off"
-        ><a href="#" id="clusters-nav-modulate" class="icon clusters-view active" title="Cluster modulieren"
+        ><a href="#" id="clusters-nav-model" class="icon clusters-view active" title="Cluster modellieren"
           ><img src="img/preferences.svg" width="30" height="30" alt=""
         ></a
         ><a href="#" id="clusters-nav-compare" class="icon clusters-view " title="Cluster vergleichen"
@@ -160,20 +160,20 @@
 
     <!-- VIEW: CLUSTEREI -->
     <section id="clusters" class="off">
-      <div id="clusters-modulate">
-        <div id="clusters-modulate-form"
-          ><input type="text" value="" placeholder="Lemmasuche" id="clusters-modulate-search"
+      <div id="clusters-model">
+        <div id="clusters-model-form"
+          ><input type="text" value="" placeholder="Lemmasuche" id="clusters-model-search"
           ><a href="#" class="clear-text-field" title="Textfeld löschen"
             ><img src="img/clear-text.svg" width="24" height="24" alt=""
           ></a
-          ><a href="#" id="clusters-modulate-reset" title="Modulierung zurücksetzen"
+          ><a href="#" id="clusters-model-reset" title="Modellierung zurücksetzen"
             ><img src="img/cleanup.svg" width="24" height="24" alt=""
           ></a
         ></div>
 
-        <div id="clusters-modulate-center"></div>
+        <div id="clusters-model-center"></div>
 
-        <div id="clusters-modulate-files"></div>
+        <div id="clusters-model-files"></div>
       </div>
 
       <div id="clusters-compare" class="off"></div>
@@ -193,10 +193,10 @@
           ><label for="clusters-preview-choose-new">neue Berechnung starten</label
         ></p>
 
-        <p id="clusters-preview-modulate"
-          ><input type="checkbox" id="clusters-preview-modulate-check"
-          ><label for="clusters-preview-modulate-check">Modulierung mit einbeziehen</label
-          ><a href="#clusterei-vorschauOptionModulierung" id="clusters-preview-help-modulate" class="icon"
+        <p id="clusters-preview-model"
+          ><input type="checkbox" id="clusters-preview-model-check"
+          ><label for="clusters-preview-model-check">Modellierung mit einbeziehen</label
+          ><a href="#clusterei-vorschauOptionModellierung" id="clusters-preview-help-model" class="icon"
             ><img src="img/help.svg" width="24" height="24" alt=""
           ></a
         ></p>
